--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>CodeHype</title>
 </head>
 <body>
+    <header>
+        
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="class2.html">Class2</a>
+            <a href="class3.html">Class3</a>
+            <a href="body.html">Body</a>
+            <a href="contact.html">ContactUs </a>
+            <a href="list.html">List</a>
+            <a href="tables.html">Tables</a>
+        </nav>
+    </header>
     <h1>CodeHype</h1>
     <p>All Tech <hr>
     <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, unde!</p>
@@ -19,7 +31,7 @@
     </a>
     <br>
     <h2>Click on Coding </h2>
-   <video src="assets/gola.MP4" width="400" height="400" controls autoplay muted></video>
+   <video src="assets/file.mp4" width="400" height="400" controls autoplay muted></video>
    <br><hr>
    <b> This is bold</b><br>
    <i>This is italic testing </i><br>
@@ -38,5 +50,9 @@
 
     Codinhg in Python - See the OutPut 
     with pre tag </pre>
+    <hr>
+    <big> This is big  <big> <br>
+    <small> This is small <small>
+    
 </body>
 </html>
