--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <a href="contact.html">ContactUs </a>
             <a href="list.html">List</a>
             <a href="tables.html">Tables</a>
+            <a href="forms.html">Forms</a>
+            <a href="form2.html">Form2</a>
         </nav>
     </header>
     <h1>CodeHype</h1>
